<resources>
    <string name="app_name">Calculator</string>
    <string name="digitSeven">7</string>
    <string name="digitEight">8</string>
    <string name="digitNine">9</string>
    <string name="operatorPlus">+</string>
    <string name="digitFour">4</string>
    <string name="btnFive">5</string>
    <string name="digitSix">6</string>
    <string name="operatorMinus">-</string>
    <string name="operatorCancel">C</string>
    <string name="operatorMultiply">*</string>
    <string name="operatorDivide">/</string>
    <string name="operatorEquals">=</string>
    <string name="digitOne">1</string>
    <string name="digitTwo">2</string>
    <string name="digitThree">3</string>
    <string name="digitZero">0</string>
</resources>