<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="model"
            type="com.example.calculator.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/mainWindow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="#BABABA"
            android:gravity="end"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nodesWindow"
            app:layout_constraintVertical_bias="0" />

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/digitSeven"
            android:onClick="@{() -> model.addNumber(7)}"
            app:layout_constraintEnd_toStartOf="@+id/btnEight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainWindow" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/digitEight"
            android:onClick="@{() -> model.addNumber(8)}"
            app:layout_constraintEnd_toStartOf="@+id/btnNine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSeven"
            app:layout_constraintTop_toTopOf="@+id/btnSeven" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/digitNine"
            android:onClick="@{() -> model.addNumber(9)}"
            app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnEight"
            app:layout_constraintTop_toTopOf="@+id/btnSeven" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/operatorPlus"
            android:onClick="@{() -> model.addOperator(`+`)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNine"
            app:layout_constraintTop_toTopOf="@+id/btnSeven" />

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/digitFour"
            android:onClick="@{() -> model.addNumber(4)}"
            app:layout_constraintEnd_toStartOf="@+id/btnFive"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSeven" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnFive"
            android:onClick="@{() -> model.addNumber(5)}"
            app:layout_constraintEnd_toStartOf="@+id/btnSix"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnFour"
            app:layout_constraintTop_toTopOf="@+id/btnFour" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/digitSix"
            android:onClick="@{() -> model.addNumber(6)}"
            app:layout_constraintEnd_toStartOf="@+id/operatorMinus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnFive"
            app:layout_constraintTop_toTopOf="@+id/btnFive" />

        <Button
            android:id="@+id/operatorMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/operatorMinus"
            android:onClick="@{() -> model.addOperator(`-`)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSix"
            app:layout_constraintTop_toTopOf="@+id/btnSix" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/operatorCancel"
            app:layout_constraintEnd_toStartOf="@+id/btnMultiply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFour" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/operatorMultiply"
            android:onClick="@{() -> model.addOperator(`*`)}"
            app:layout_constraintEnd_toStartOf="@+id/btnDivide"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCancel"
            app:layout_constraintTop_toTopOf="@+id/btnCancel" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/operatorDivide"
            android:onClick="@{() -> model.addOperator(`/`)}"
            app:layout_constraintEnd_toStartOf="@+id/btnEquals"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnMultiply"
            app:layout_constraintTop_toTopOf="@+id/btnCancel" />

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/operatorEquals"
            android:onClick="@{() -> model.addOperator(`=`)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnDivide"
            app:layout_constraintTop_toTopOf="@+id/btnCancel" />

        <TextView
            android:id="@+id/nodesWindow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="30sp"
            android:text="@{model.nodesLiteral}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
